--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,32 @@
 html {
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
+body {
+  margin: 0;
+}
+
 h2 {
+  display: inline;
+  line-height: 1.4;
+  margin: 0 0 1rem;
   color: #fff;
   background: rgba(0, 0, 0, .5);
   font-size: 4rem;
-  font-weight: bold;
+  font-weight: 900;
 }
 
 p {
   font-size: 2rem;
   font-style: italic;
+  margin-top: 1rem;
+  margin-bottom: 0;
 }
 
 .img-flex {
@@ -27,10 +37,15 @@ p {
 .banner {
   position: relative;
   max-height: 500px;
+  overflow: hidden;
 }
 
 .banner-content {
   max-width: 50em;
+  width: 100%;
   position: absolute;
-  bottom: 0;
+  bottom: 1.5rem;
+  left: 50%;
+  transform: translate(-50%);
+  padding-left: 0 1.5rem;
 }
